Minor updates to pom.xml files and upgrade to Java 11